--- a/notebooks/figure.ipynb
+++ b/notebooks/figure.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "14c4ea2f",
    "metadata": {},
    "outputs": [],
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "fb626763",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.9</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.8</td>\n",
@@ -803,7 +803,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.2</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.2</td>\n",
+       "      <td>0.3</td>\n",
        "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -859,7 +859,7 @@
        "1mhp          0.4           0.5   0.4         0.3     0.5           0.6   \n",
        "1n8z          0.0           0.0   0.0         0.0     0.0           0.0   \n",
        "3gbn_h1       1.0           1.0   1.0         1.0     0.9           0.9   \n",
-       "3gbn_h9       1.0           1.0   1.0         1.0     0.8           0.8   \n",
+       "3gbn_h9       1.0           0.9   1.0         1.0     0.8           0.8   \n",
        "4fqi_h1       0.7           0.4   0.1         0.2     0.7           0.6   \n",
        "4fqi_h3       0.1           0.0   0.0         0.0     0.1           0.3   \n",
        "aayl49        0.0           0.0   0.1         0.1     0.0           0.0   \n",
@@ -874,11 +874,11 @@
        "4fqi_h1          0.4    1.0  \n",
        "4fqi_h3          0.0    0.0  \n",
        "aayl49           0.0    0.0  \n",
-       "aayl49_ML        0.2    0.2  \n",
+       "aayl49_ML        0.3    0.2  \n",
        "aayl51           0.0    0.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1012,7 @@
     "\n",
     "# (Optional) Sort datasets if needed\n",
     "result_df = result_df.reindex(dataset_order)\n",
-    "\n",
+    "result_df.to_csv(\"result_precison@10.csv\")\n",
     "result_df\n"
    ]
   },
